<resources>
    <string name="app_name">Marcel Droid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marshell for Android</string>
    <string name="action_settings">Settings</string>

    <string name="menu_shell">Shell</string>
    <string name="menu_editor">Editor</string>
    <string name="menu_shell_works">Shell Works</string>
    <string name="menu_settings">Settings</string>
    <!-- the last weird stuff is a space. Trailing whitespace are removed by default so we have to do this -->
    <string name="initial_prompt_text"><![CDATA[000>]]>&#160;</string>
    <string name="files_permission_key">files_permission</string>

    <string name="shell_works">Shell Works</string>
    <string name="name_should_be_unique">Name (should be unique)</string>
    <string name="description">Description</string>
    <string name="work_script">Create Script</string>
    <string name="schedule_later">Schedule later</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="periodic">Periodic</string>
    <string name="every">Every</string>
    <string name="silent">Silent</string>
    <string name="you_will_still_be_notified_when_a_shell_worker_ends_up_with_an_error">You will still be notified when a shell worker ends up with an error</string>
    <string name="pick_this_directory">Pick this directory</string>
    <string name="pick_this_directory_q">Pick this directory?</string>
    <string name="pick_this_file_q">Pick this file?</string>
    <string name="internal_storage_root">Internal Storage Root</string>
    <string name="do_you_want_to_pick_file">Do you want to pick %1$s?</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="no_child_dirs">This directory has no child directories</string>
    <string name="empty_dir">This directory has no scripts</string>
    <string name="menu_documentation">Documentation</string>
    <string name="name_is_required">Name is required</string>
    <string name="empty_script">You must provide a script</string>
    <string name="didnt_filled_scheduled_parameters">You must pick provide all schedule parameters</string>
    <string name="scheduled_for">Scheduled for %1$s</string>
    <string name="work_started">started %1$s</string>
    <string name="work_ran_lasted">ran %1$s for %2$s</string>
    <string name="work_last_ran_lasted">last ran %1$s for %2$s</string>
    <string name="ran_from_to">ran fom %1$s\nto %2$s (took %3$s)</string>
    <string name="last_ran_from_short">Last ran fom %1$s\nto %2$s</string>
    <string name="work_output">%1$s output</string>
    <string name="work_error">%1$s error</string>
    <string name="started_at">Started at %1$s</string>
    <string name="result_output">Result: %1$s</string>
    <string name="result_error">Error: %1$s</string>
    <string name="cancel_work_q">Cancel work %1$s?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="next_run_in">next run in %1$s</string>
    <string name="will_run_in">will run in %1$s</string>
    <string name="cant_modify_finished_work">Can\'t modify a finished work</string>
    <string name="delete_work_q">Delete work %1$s?</string>
    <string name="delete_shell_work">Delete Shell Work</string>
    <string name="has_not_ran_yet">has not ran yet</string>
    <string name="should_run_shortly">should run shortly</string>
    <string name="periodic_work_state">PERIODIC\n(every %1$d %2$s)</string>
    <string name="periodic_work_state_one">PERIODIC\n(every %1$s)</string>
    <string name="edit_script">Edit Script</string>
    <string name="menu_script_collection">Script Collection</string>
    <string name="open_file">Open file</string>
    <string name="script_must_not_be_empty">Script must not be empty</string>
    <string name="clear_dumbbells_preference_key">clear_dumbbells</string>
    <string name="remove_all_fetched_dumbbells_n">Remove all fetched dumbbells (%1$d dumbbell))</string>
    <string name="init_script_key">init_script_key</string>
    <string name="menu_quit">Exit</string>
</resources>