<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/title"
            style="@style/shellText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/workNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:layout_marginTop="44dp"
            android:hint="@string/name_should_be_unique"
            android:textColorHint="#fff"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/workName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="#fff"
                android:textColorHint="#fff" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:layout_marginTop="28dp"
            android:hint="@string/description"
            android:textColorHint="#fff"
            app:layout_constraintTop_toBottomOf="@+id/workNameLayout"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/workDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pickScriptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/pick_script"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/filePath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/pickScriptButton"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


        <CheckBox
            android:id="@+id/networkRequiredCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/networkRequiredText"
            app:layout_constraintBottom_toBottomOf="@id/networkRequiredText"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:text="Network required"
            android:textColor="#fff"
            android:id="@+id/networkRequiredText"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/scheduleCheckbox"
            app:layout_constraintTop_toBottomOf="@+id/pickScriptButton" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/networkRequiredLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:el_duration="1000"
            app:el_expanded="false"
            app:el_parallax="0.5"
            app:layout_constraintTop_toBottomOf="@+id/networkRequiredCheckBox"
            tools:layout_editor_absoluteX="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="This work will run only when a stable network connection is available"
                android:textColor="#fff"
                android:textSize="14sp" />
        </net.cachapa.expandablelayout.ExpandableLayout>

        <CheckBox
            android:id="@+id/scheduleCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/networkRequiredLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:text="@string/schedule_later"
            android:textColor="#fff"
            android:id="@+id/scheduleLaterText"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/scheduleCheckbox"
            app:layout_constraintTop_toBottomOf="@+id/networkRequiredLayout" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/scheduleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:el_duration="1000"
            app:el_expanded="false"
            app:el_parallax="0.5"
            app:layout_constraintTop_toBottomOf="@+id/scheduleCheckbox"
            tools:layout_editor_absoluteX="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_date"
                    android:id="@+id/pickDateButton"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/pickDateButton"
                    android:layout_marginStart="16dp"
                    android:layout_alignBaseline="@id/pickDateButton"
                    android:id="@+id/date"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_time"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/pickDateButton"
                    android:id="@+id/pickTimeButton"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/pickDateButton"
                    android:layout_marginStart="16dp"
                    android:layout_alignBaseline="@id/pickTimeButton"
                    android:id="@+id/time"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    />
            </RelativeLayout>

        </net.cachapa.expandablelayout.ExpandableLayout>

        <CheckBox
            android:id="@+id/periodicCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scheduleLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:text="@string/periodic"
            android:textColor="#fff"
            android:id="@+id/periodCheckBox"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/scheduleCheckbox"
            app:layout_constraintTop_toBottomOf="@+id/scheduleLayout" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/periodicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:el_duration="1000"
            app:el_expanded="false"
            app:el_parallax="0.5"
            app:layout_constraintTop_toBottomOf="@+id/periodicCheckbox"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/every"
                    android:textSize="16sp"
                    />

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="#fff"
                    android:id="@+id/periodEditText"
                    android:inputType="number"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/periodicUnitsSpinner"
                    />
            </LinearLayout>

        </net.cachapa.expandablelayout.ExpandableLayout>


        <TextView
            android:id="@+id/silentCheckBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp"
            android:text="@string/silent"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/silentCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/periodicLayout" />

        <CheckBox
            android:id="@+id/silentCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/periodicLayout" />

        <TextView
            android:layout_width="230dp"
            android:alpha="0"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:id="@+id/silentDescription"
            android:text="@string/you_will_still_be_notified_when_a_shell_worker_ends_up_with_an_error"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:gravity="center"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="509dp"
            app:layout_constraintStart_toEndOf="@id/silentCheckBoxText"
            app:layout_constraintTop_toBottomOf="@+id/periodicLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>